# toolbox

./: COMPLETE_SETUP_GUIDE.md  Cargo.toml  GITFLOW_DOCUMENTATION_GUIDE.md  INSTALLATION_GUIDE.md  LICENSE.md  README.md  ReadmeInstructions.md  TOOLBOX_SYSTEM_DOCUMENTATION.md  build.sh  create_script_skeleton.sh  create_toolbox.sh  generate_readme.sh  install_toolbox.sh  install_toolbox_foundations.sh  install_toolbox_ninja.sh  toolbox_menu.ini  toolbox_rebuild.sh  toolbox_scan.sh  toolbox_scan_config.ini  toolbox_scan_config_updated.ini
.claude/: settings.local.json
CollaboraOnline/: README.md  update_coolwsd_config.sh
LinuxTools/: 03.install_links.sh  1.install_browsh.sh  2.install_elinks.sh  4.install_w3m.sh  5.htop.sh  7.iotop.sh  README.md
SystemSecurityUtilities/: selinux_chatgpt_stream.py  selinux_chatgpt_stream.sh
ToolboxCore/: backcopy.sh  copyfile.sh  create_toolbox.sh  db_functions.sh  db_init.sh  db_init_menu_extended.sh  db_menu_meta_functions.sh  generate_menu_script.py  generic_functions.sh  install_sqlite.sh  install_toolbox.sh  json_param_parser.sh  menu_build.py  menu_build_preview.txt  menu_dialog.py  menu_dialog.sh  menu_init_build.sh  menu_output_1-sql.txt  menu_output_1.txt  menu_output_2-sql.txt  menu_output_2.txt  menu_output_3-sql.txt  menu_output_3.txt  menu_output_4-sql.txt  menu_output_4.txt  menu_scan.py  menu_scan_output.json  menu_scan_preview.txt  org_menu_init_build.sh  static_menu.sh  toolbox_menu.ini  toolbox_scan.sh  toolbox_scan_config.ini  v1-menu_dialog.py  v1536-menu_dialog.py
ToolboxPages/: generate_readme.sh  (+2 more)
src/: ui.rs  (+7 more)
(+74 files in other folders)
