[package]
name = "toolbox-menu"
version = "0.1.0"
edition = "2021"
description = "Advanced CLI menu system for toolbox scripts"
authors = ["Toolbox Team"]

[[bin]]
name = "toolbox"
path = "src/main.rs"

[dependencies]
# CLI and TUI
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
tui-input = "0.8"
fuzzy-matcher = "0.3"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and async
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
regex = "1.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

# Progress bars and styling
indicatif = "0.17"
console = "0.15"
colored = "2.0"

[dev-dependencies]
tempfile = "3.8"